Overlap navigation menu and dropdown menu when hovering to prevent calling of mouseleave event
fixes #472

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -1,5 +1,5 @@
 /*!
- * Copyright (c) 2013 The Pycroft Authors. See the AUTHORS file.
+ * Copyright (c) 2014 The Pycroft Authors. See the AUTHORS file.
  * This file is part of the Pycroft project and licensed under the terms of
  * the Apache License, Version 2.0. See the LICENSE file for details.
  */
@@ -18,6 +18,7 @@ h2 {
 
 .dropdown:hover .dropdown-menu {
     display: block;
+    margin-top: -2px;
 }
 
 .level a{
